--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,14 +2,20 @@ body {
   background-color: #002b36;
 }
 
+#wrapper{
+  position: relative;
+}
+
 #console {
   font-family: courier, monospace;
+  position: relative;
   color: #839496;
   max-width: 750px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
   font-size: 14px;
+  z-index: 1;
 }
 
 a {
@@ -47,4 +53,29 @@ a {
   99% {
     color: #002b36;
   }
+}
+
+#bg {
+  top: 0;
+  left: 0;
+  width:100%;
+  height:100vh;
+  position: absolute;
+  z-index:-2;
+
+}
+
+.flame_animation{
+  line-height: 1.2;
+  font-family: "AeonikMono-Regular", monospace;
+  overflow: hidden;
+  margin: 0;
+  margin-bottom:-10px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 1;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
 }
